overflow added and fix css of Nav

--- a/src/components/Header/Nav/Nav.css
+++ b/src/components/Header/Nav/Nav.css
@@ -17,10 +17,14 @@
 
 .nav-logo a {
     padding: 40px 50px 32px 15px;
+    display: inline-block;
 }
 
-.nav-logo a {
-    display: inline-block;
+.nav-logo svg {
+    max-width: 258px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 nav .mb-wrapper {
@@ -29,7 +33,7 @@ nav .mb-wrapper {
 }
 
 .nav-links {
-    padding: 0 52px 0 0;
+    padding: 0 30px 0 0;
     display: flex;
     flex-wrap: wrap;
 }
@@ -100,11 +104,7 @@ nav .mb-wrapper {
 
 @media screen and (max-width: 1366px) {
     .nav-logo a {
-        padding: 40px 15px 32px;
-    }
-
-    .nav-logo svg {
-        width: 23vw;
+        padding: 30px 15px;
     }
 
     .nav-links {
@@ -130,6 +130,8 @@ nav .mb-wrapper {
         display: block;
         background: #1f2338;
         z-index: 999;
+        overflow-y: auto;
+        overflow-x: hidden;
     }
 
     .top-nav.active {
@@ -139,6 +141,7 @@ nav .mb-wrapper {
     .main-nav {
         width: 100%;
         display: flex;
+        align-items: center;
     }
 
     #btn-nav-mb {
@@ -153,8 +156,6 @@ nav .mb-wrapper {
 
     nav .mb-wrapper.active {
         display: flex;
-        flex-direction: column;
-        justify-content: center;
     }
 
     .nav-links {
@@ -197,4 +198,3 @@ nav .mb-wrapper {
         margin: 0 15px;
     }
 }
-
